# glog-demo

./: .gitignore  CMakeLists.txt  README.md
include/: GLogger.h
src/: GLogger.cpp  glogDemo.cpp
